--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,22 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
+  "main": "src/app.ts",
   "scripts": {
     "dev": "nodemon",
-    "build": "rm -rf ./build && tsc",
-    "start": "node ./build/index.js"
+    "build": "rm -rf ./dist && tsc",
+    "start": "node ./dist/app.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.11",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
