--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,9 +3,8 @@
     "target": "es5",
     "module": "commonjs",
     "lib": ["es6"],
-    "allowJs": true,
-    "outDir": "build",
-    "rootDir": "src",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
