--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.5.4",
-    "socket.io-client": "^4.5.4"
+    "socket.io-client": "^4.5.4",
+    "wappalyzer": "^6.10.47"
   }
 }
