--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,17 @@
-FROM node:18-alpine
+FROM node:16-alpine
+
+# Installs latest Chromium (100) package.
+RUN apk add --no-cache \
+    chromium \
+    nss \
+    freetype \
+    harfbuzz \
+    ca-certificates \
+    ttf-freefont
+
+# Tell Puppeteer to skip installing Chrome. We'll be using the installed package.
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
 WORKDIR /app
 
